--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,8 +2,33 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  margin: auto;
 }
 
 body{
   background-image: url("../img/sfondo.jpg");
+}
+
+.container{
+  margin-top: 10px;
+  margin-bottom: 10px;
+  width: 1000px;
+  height: 100vh;
+  background-color: red;
+}
+
+header{
+  width: 100%;
+  height: 380px;
+  background-color: white;
+  background-image: url("../img/natural.png");
+  background-repeat: no-repeat !important;
+  background-position: 50% 50%  !important;
+  box-shadow: 0px -10px 80px black;
+}
+
+nav{
+  width: 100%;
+  height: 50px;
+  background-color: yellow;
 }
