--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,13 +22,42 @@ header{
   height: 380px;
   background-color: white;
   background-image: url("../img/natural.png");
-  background-repeat: no-repeat !important;
-  background-position: 50% 50%  !important;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
   box-shadow: 0px -10px 80px black;
 }
 
 nav{
   width: 100%;
   height: 50px;
-  background-color: yellow;
+  background-color: #504741;
+  text-align: center;
+  line-height: 48px;
+}
+
+ul.nav_bar{
+  width: 100%;
+  height: 100%;
+}
+
+ul li{
+  list-style: none;
+  display: inline-block;
+  padding: 0 10px;
+  vertical-align: middle;
+  height: 100%;
+}
+
+ul li:hover{
+  background-color: #302b27;
+}
+
+li a{
+  font-family: 'Montserrat',Arial,Helvetica,sans-serif;
+  color: white;
+  text-decoration: none;
+  font-weight: 400;
+  height: 100%;
+  display: inline-block;
+  vertical-align: middle;
 }
