--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@ body{
   margin-top: 10px;
   margin-bottom: 10px;
   width: 1000px;
-  height: 1500px;
+  height: 100vh;
   background-color: yellow;
 }
 
@@ -103,28 +103,44 @@ main::after{
 .central_column{
   width: 52%;
   height: 350px;
-  background-color: blue;
+  background-color: white;
   border-radius: 10px;
   margin: 0 40px;
+  padding: 20PX;
 }
 
 .right_side{
   width: 20%;
   height: 800px;
-  background-color: lightblue;
 }
 
 .text_widget{
   width: 100%;
   height: 380px;
-  background-color: blue;
+  background-color: white;
   border-radius: 10px;
+  padding: 20PX;
   margin-bottom: 40px;
 }
 
 aside li{
   list-style: none;
+  margin-top: 5px;
+}
+
+aside li a{
   color: red;
   font-weight: bold;
-  margin-top: 5px;
+  text-decoration: none;
+}
+
+.central_column p, .text_widget p{
+  margin-top: 40px;
+}
+
+footer{
+  background-color: white;
+  width: 100%;
+  height: 300px;
+  border-radius: 5px;
 }
