--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,8 +14,6 @@ body{
   margin-top: 10px;
   margin-bottom: 10px;
   width: 1000px;
-  height: 100vh;
-  background-color: yellow;
 }
 
 header{
@@ -62,9 +60,8 @@ nav li a{
 
 main{
   width: 100%;
-  height: 100%;
+  height: 1270px;
   margin-top: 10px;
-  background-color: green;
 }
 
 main::after{
@@ -83,6 +80,12 @@ main::after{
   background-color: white;
   border-radius: 10px;
   padding: 8px;
+}
+
+.organic_themes::after{
+  clear: both;
+  content: "";
+  display: table;
 }
 
 .organic_themes i{
@@ -141,6 +144,29 @@ aside li a{
 footer{
   background-color: white;
   width: 100%;
-  height: 300px;
-  border-radius: 5px;
+  height: 170px;
+  border-radius: 10px;
+  border: 1px solid black;
+  text-align: center;
+}
+
+footer .top span{
+  color: grey;
+  font-style: oblique;
+}
+
+footer .bottom i{
+  color: grey;
+  margin: 45px 85px;
+  font-size: 50px;
+  vertical-align: middle;
+}
+
+footer .bottom i:hover{
+  cursor: pointer;
+  color: blue;
+}
+
+.fab fa-instagram{
+  margin: 50px;
 }
