--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,10 @@ header{
   background-image: url("../img/natural.png");
   background-repeat: no-repeat;
   background-position: 50% 50%;
-  box-shadow: 0px -10px 80px black;
+}
+
+.box_shadow{
+  box-shadow: 1px 2px 10px -1px black;
 }
 
 nav{
@@ -146,7 +149,6 @@ footer{
   width: 100%;
   height: 170px;
   border-radius: 10px;
-  border: 1px solid black;
   text-align: center;
 }
 
