--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,7 +69,6 @@ nav li a{
 
 main{
   width: 100%;
-  /* height: 1270px; */
   margin-top: 10px;
 }
 
@@ -119,6 +118,10 @@ main::after{
   border-radius: 10px;
   padding: 20PX;
   margin: 0 40px;
+}
+
+.central_column h1{
+  text-shadow:  7px 3px rgba(0, 0, 0, 0.2);
 }
 
 .right_side{
