--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,11 +3,10 @@
   padding: 0;
   box-sizing: border-box;
   margin: auto;
-  font-family: 'Montserrat',Arial,Helvetica,sans-serif;
 }
 
 body{
-  background-image: url("../img/sfondo.jpg");
+  background-color: lightblue;
 }
 
 .container{
@@ -16,56 +15,33 @@ body{
   width: 1000px;
 }
 
-.container::after{
-  clear: both;
-  content: "";
-  display: table;
-}
-
-header{
-  width: 100%;
-  height: 380px;
-  background-color: white;
-  background-image: url("../img/natural.png");
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
-}
+/* Classi Utility */
 
 .box_shadow{
   box-shadow: 1px 2px 10px -1px black;
 }
 
+.float_left{
+  float: left;
+}
+
+/* header */
+
+header{
+  width: 100%;
+  height: 380px;
+  background-color: blue;
+}
+
+/* nav_bar */
+
 nav{
   width: 100%;
   height: 50px;
   background-color: #504741;
-  text-align: center;
-  line-height: 50px;
 }
 
-ul.nav_bar{
-  width: 100%;
-  height: 100%;
-}
-
-nav ul li{
-  list-style: none;
-  display: inline-block;
-  padding: 0 10px;
-  height: 100%;
-}
-
-nav ul li:hover{
-  background-color: #302b27;
-}
-
-nav li a{
-  color: white;
-  text-decoration: none;
-  font-weight: 400;
-  height: 100%;
-  display: inline-block;
-}
+/* main */
 
 main{
   width: 100%;
@@ -78,51 +54,26 @@ main::after{
   display: table;
 }
 
-.float_left{
-  float: left;
-}
+/* Colonna di Sinistra */
 
-.organic_themes{
+.left_side{
   width: 20%;
   height: 400px;
-  background-color: white;
+  background-color: green;
   border-radius: 10px;
-  padding: 8px;
 }
 
-.organic_themes::after{
-  clear: both;
-  content: "";
-  display: table;
-}
-
-.organic_themes i{
-  font-size: 30px;
-  background-color: orange;
-  color: white;
-  padding: 5px;
-  border-radius: 2px;
-  float: left;
-}
-
-.organic_themes h3{
-  float: left;
-  font-size: 30px;
-  margin-left: 5px;
-}
+/* Colonna Centrale */
 
 .central_column{
   width: 52%;
   height: 350px;
-  background-color: white;
+  background-color: yellow;
   border-radius: 10px;
-  padding: 20PX;
-  margin: 0 40px;
+  margin: 0 4%;
 }
 
-.central_column h1{
-  text-shadow:  7px 3px rgba(0, 0, 0, 0.2);
-}
+/* Colonna di Destra */
 
 .right_side{
   width: 20%;
@@ -131,48 +82,16 @@ main::after{
 .text_widget{
   width: 100%;
   height: 380px;
-  background-color: white;
+  background-color: red;
   border-radius: 10px;
-  padding: 20PX;
   margin-bottom: 40px;
 }
 
-aside li{
-  list-style: none;
-  margin-top: 5px;
-}
-
-aside li a{
-  color: red;
-  font-weight: bold;
-  text-decoration: none;
-}
-
-.central_column p, .text_widget p{
-  margin-top: 40px;
-}
+/* Footer */
 
 footer{
-  background-color: white;
+  background-color: purple;
   width: 100%;
   height: 170px;
   border-radius: 10px;
-  text-align: center;
-}
-
-footer .top span{
-  color: grey;
-  font-style: oblique;
-}
-
-footer .bottom i{
-  color: grey;
-  margin: 45px 85px;
-  font-size: 50px;
-  vertical-align: middle;
-}
-
-footer .bottom i:hover{
-  cursor: pointer;
-  color: blue;
 }
